--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "16.0.0-alpha.6",
     "react-native": "0.44.0",
     "react-native-tab-navigator": "^0.3.3",
+    "react-native-vector-icons": "^4.1.1",
     "react-navigation": "^1.0.0-beta.9"
   },
   "devDependencies": {
